# excel-sidekick

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements-linux.txt  requirements.txt
config/: config.yaml
docs/: IMPLEMENTATION_SUMMARY.md  USAGE.md
src/application/: excel_assistant_service.py
src/domain/agent/: graph.py  prompts.py  state.py  tools.py
src/domain/models/: annotation.py  dependency.py  query.py  selection.py  workbook.py
src/domain/services/: annotation_management_service.py  dependency_analysis_service.py  exploration_agent.py  llm_interaction_service.py  workbook_data_service.py
src/infrastructure/config/: config_loader.py
src/infrastructure/excel/: snapshot_generator.py  workbook_discovery.py  xlwings_connector.py
src/infrastructure/llm/: prompt_builder.py
src/infrastructure/llm/providers/: base_provider.py  manual_provider.py  mock_provider.py
src/infrastructure/storage/: annotation_storage.py  graph_cache.py
src/presentation/cli/: cli_app.py  interactive_selector.py  repl.py
src/presentation/cli/commands/: __init__.py  annotate_command.py  ask_command.py  build_command.py  cache_command.py  connect_command.py  discover_command.py  explain_command.py  list_command.py  search_command.py  trace_command.py
src/presentation/cli/formatters/: __init__.py  response_formatter.py  tree_formatter.py
src/shared/: exceptions.py  logging.py  types.py
